Connection Confirm modal changes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3796,3 +3796,7 @@ header .theme-title h1 span {
 .nla-add-heading-block .ant-input {
   margin-bottom: 0;
 }
+
+:where(.css-dev-only-do-not-override-14i19y2).ant-input-affix-wrapper >input.ant-input, :where(.css-dev-only-do-not-override-14i19y2).ant-input-affix-wrapper >textarea.ant-input {
+  font-weight: 400;
+}
