--- a/src/css/simulation-style.css
+++ b/src/css/simulation-style.css
@@ -62,6 +62,7 @@
 
 input.simu_input {
   padding: 1px 10px;
+  min-width: 80px;
   height: 38px;
   background: #fff;
   margin-bottom: 0 !important;
@@ -403,6 +404,10 @@ select.form-select.form-select-lg.sim_drop {
 .price_simulator_dropdowns_wrapper {
   display: flex;
   gap: 20px;
+}
+
+.price_simulator_dropdowns_wrapper .ant-select {
+  height: auto;
 }
 
 @media (max-width: 1199px) {
