feat: event tpo

--- a/src/App.css
+++ b/src/App.css
@@ -407,7 +407,7 @@ input[list] {
   pointer-events: auto;
 } */
 
-@import "../node_modules/@syncfusion/ej2-base/styles/tailwind.css";
+/* @import "../node_modules/@syncfusion/ej2-base/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-buttons/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-calendars/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-dropdowns/styles/tailwind.css";
@@ -416,4 +416,4 @@ input[list] {
 @import "../node_modules/@syncfusion/ej2-navigations/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-popups/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-splitbuttons/styles/tailwind.css";
-@import "../node_modules/@syncfusion/ej2-react-schedule/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-react-schedule/styles/tailwind.css"; */
