product name ellips

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3923,3 +3923,11 @@ body.modal-open {
 .tpo-report-accordion .accordion-button:focus {
   border-bottom: 1px;
 }
+
+.product-title span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
